k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-generator-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-generator-backend
  template:
    metadata:
      labels:
        app: code-generator-backend
    spec:
      containers:
      - name: code-generator-backend

        image: 042889969014.dkr.ecr.us-east-1.amazonaws.com/code-generator-backend:20251103070717


        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"                # Minimum CPU guaranteed
            memory: "1024Mi"            # Minimum memory guaranteed
            ephemeral-storage: "200Mi" # Minimum disk space guaranteed
          limits:
            cpu: "500m"                # Max CPU allowed
            memory: "2000Mi"            # Max memory allowed
            # ephemeral-storage: "500Mi" # Max disk space allowed
      serviceAccountName: mcp-poc
---
