k8s/ingress.yaml
  
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-generator-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
spec:
  tls:
    - hosts:
        - api-code-generator.yashtechai.link
      secretName: api-code-generator-tls-secret
spec:
  ingressClassName: nginx
  rules:
    - host: api-code-generator.yashtechai.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-generator-backend-service
                port:
                  number: 8000
